[package]
name = "algo3_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.anyhow]
version = "1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.indexmap]
version = "1"
features = ["rayon", "serde"]

[dependencies.num_cpus]
version = "1"

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
features = ["arbitrary_precision"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.warp]
version = "0.3"
